--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,7 +2,7 @@
 
 .home { 
   @media @mobile {
-    margin: 2%;
+    padding: 2%;
   }
   .intro {
     h2 {
@@ -12,6 +12,10 @@
     img {
       margin: auto 0;
       border-radius: 5px;
+      @media @mobile {
+        margin: auto;
+        widtH: 100%;
+      }
     }
 
     p {
