--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,9 @@
         flex-direction: column;
         align-items: center;
         background-color: @nav-bg;
+        @media @mobile {
+            margin-right: 999%;
+          }
     .navdiv {
         margin-top: 1%;
         h1 {
